--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,7 @@
         android:layout_below="@+id/iconIv"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
-        android:text="Welcome to Get Your Book App"
+        android:text="Get Your Book App"
         android:textColor="@color/black"
         android:textSize="16sp"/>
 
